hotfix: removed top level statements from Main