@@ -1,59 +1,62 @@
 import Game.PageManager;
 import Pages.*;
+import java.util.ArrayList;
 
-SingleOrCoopSelectPage selectSingleOrCoop = new SingleOrCoopSelectPage();
-MainMenuPage mainMenu = new MainMenuPage();
-LevelSelectPage levelSelectPage = new LevelSelectPage();
-DevTestScene devTestScene = new DevTestScene();
-level1Frame level1 = new level1Frame();
+public class Main {
 
-boolean singlePlayer = true;
+    private static final SingleOrCoopSelectPage selectSingleOrCoop = new SingleOrCoopSelectPage();
+    private static final MainMenuPage mainMenu = new MainMenuPage();
+    private static final LevelSelectPage levelSelectPage = new LevelSelectPage();
+    private static final DevTestScene devTestScene = new DevTestScene();
+    private static final level1Frame level1 = new level1Frame();
 
-ArrayList<Page> levels = new ArrayList<>();
+    private static boolean singlePlayer = true;
+    private static ArrayList<Page> levels = new ArrayList<>();
 
-void main() {
-    PageManager.init();
+    public static void main(String[] args) {
+        PageManager.init();
 
-    PageManager.preLoadPage(devTestScene);
-    PageManager.preLoadPage(level1);
-    PageManager.preLoadPage(levelSelectPage);
-    PageManager.preLoadPage(selectSingleOrCoop);
-    PageManager.preLoadPage(mainMenu);
-    //IMPORTANT DEV NOTE:
-    //SET VM OPTIONS IN RUN CONFIGURATION TO THIS TO RUN: -Djava.library.path=Libs\Natives\Windows --enable-preview --add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED
-    //IF USING LINUX CHANGE Libs\Natives\Windows WITH Libs\Natives\Linux
-    PageManager.showPage(mainMenu);
+        // Preload pages
+        PageManager.preLoadPage(devTestScene);
+        PageManager.preLoadPage(level1);
+        PageManager.preLoadPage(levelSelectPage);
+        PageManager.preLoadPage(selectSingleOrCoop);
+        PageManager.preLoadPage(mainMenu);
 
-    //load into memory without showing
-    levels.add(devTestScene);
-    levels.add(level1);
+        // Show main menu
+        PageManager.showPage(mainMenu);
 
-    mainMenu.setLevelsButtonAction(() -> PageManager.switchPage(mainMenu, selectSingleOrCoop)); //prompts you for singleplayer or coop before opening levels
-    selectSingleOrCoop.setSinglePlayerButtonAction(() -> singlePlayer = true);
-    selectSingleOrCoop.setCoopButtonAction(() -> singlePlayer = false);
+        // Load levels into memory
+        levels.add(devTestScene);
+        levels.add(level1);
 
-    setupLevels();
+        // Set button actions
+        mainMenu.setLevelsButtonAction(() -> PageManager.switchPage(mainMenu, selectSingleOrCoop));
+        selectSingleOrCoop.setSinglePlayerButtonAction(() -> singlePlayer = true);
+        selectSingleOrCoop.setCoopButtonAction(() -> singlePlayer = false);
+
+        setupLevels();
+    }
+
+    private static void setupLevels() {
+        mainMenu.setPlayButtonAction(() -> {
+            // TODO: switch to level 1
+        });
+
+        mainMenu.setLevelsButtonAction(() -> {
+            // Return to menu
+            levelSelectPage.setBackButtonAction(() -> PageManager.switchPage(levelSelectPage, mainMenu));
+
+            for (int i = 0; i < levels.size(); i++) {
+                final int idx = i; // To bypass lambda final constraint
+                levelSelectPage.setLevelAction(idx, () -> openLevel(idx));
+            }
+
+            PageManager.switchPage(mainMenu, levelSelectPage);
+        });
+    }
+
+    private static void openLevel(int i) {
+        PageManager.switchPage(levelSelectPage, levels.get(i));
+    }
 }
-
-void setupLevels() {
-    mainMenu.setPlayButtonAction(() -> {
-        //TODO: switch to level 1
-
-    });
-
-    mainMenu.setLevelsButtonAction(() -> {
-        //returns to menu
-        levelSelectPage.setBackButtonAction(() -> PageManager.switchPage(levelSelectPage, mainMenu));
-
-        for (int i = 0; i < levels.size(); i++) {
-            final int idx = i; //to bypass the lambda final constraint
-            levelSelectPage.setLevelAction(idx, () -> openLevel(idx));
-        }
-        PageManager.switchPage(mainMenu, levelSelectPage);
-    });
-}
-
-void openLevel(int i) {
-    PageManager.switchPage(levelSelectPage, levels.get(i));
-}
-
